--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "pg-promise": "^11.4.3"
   },
   "devDependencies": {
     "jest": "^29.5.0"
