--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "server": "nodemon ./server.js",
-    "test": "jest"
+    "test": "mocha test/*.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,13 @@
     "pg-promise": "^11.4.3"
   },
   "devDependencies": {
-    "jest": "^29.5.0"
+    "chai": "^4.3.7",
+    "eslint": "^8.38.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "mocha": "^10.2.0"
   }
 }
