--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
     "pg": "^8.10.0",
-    "pg-promise": "^11.4.3"
+    "pg-promise": "^11.4.3",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "chai": "^4.3.7",
