--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^2.0.22",
     "pg": "^8.10.0",
     "pg-promise": "^11.4.3",
+    "redis": "^4.6.6",
     "supertest": "^6.3.3"
   },
   "devDependencies": {
