--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     ports:
       - "3000:3000"
     depends_on:
-      - redis
       - db
+      - redis
     environment:
       - REDIS_HOST=redis
       - DB_HOST=db
@@ -18,13 +18,9 @@ services:
     image: "postgres:latest"
     ports:
       - "5432:5432"
-    restart: always
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     volumes:
       - ./aerio_dump.sql:/docker-entrypoint-initdb.d/aerio_dump.sql
-
-
-
