--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "ioredis": "^5.3.2",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
     "pg": "^8.10.0",
     "pg-promise": "^11.4.3",
-    "redis": "^4.6.6",
     "supertest": "^6.3.3"
   },
   "devDependencies": {
