Specify db instance for docker swarm

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,8 @@ services:
       - postgres_db
     deploy:
       replicas: 1
+      placement:
+        constraints: [node.labels.db == true]
       restart_policy:
         condition: on-failure
 secrets:
