--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,8 @@ services:
       - POSTGRES_PASSWORD_FILE=/run/secrets/postgres_password
       - POSTGRES_DB_FILE=/run/secrets/postgres_db
     volumes:
-      - ./aerio_dump.sql:/docker-entrypoint-initdb.d/aerio_dump.sql
+      - db_data:/var/lib/postgresql/data
+      - /efs/aerio_dump.sql:/docker-entrypoint-initdb.d/aerio_dump.sql
     secrets:
       - postgres_user
       - postgres_password
@@ -45,6 +46,13 @@ services:
         constraints: [node.labels.db == true]
       restart_policy:
         condition: on-failure
+volumes:
+  db_data:
+    driver: local
+    driver_opts:
+      type: nfs
+      o: addr=fs-03d1ec6daf915ac10.efs.us-east-1.amazonaws.com,nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2
+      device: :/
 secrets:
   postgres_user:
     external: true
