Updated for ec2 runtime

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   server:
-    image: kahlstorf1/sdcserver
+    image: kahlstorf1/sdcserver:latest
     ports:
       - "3000:3000"
     depends_on:
@@ -12,11 +12,11 @@ services:
       - DB_HOST=db
     secrets:
       - source: postgres_user
-        target: POSTGRES_USER
+        target: postgres_user
       - source: postgres_password
-        target: POSTGRES_PASSWORD
+        target: postgres_password
       - source: postgres_db
-        target: POSTGRES_DB
+        target: postgres_db
   redis:
     image: "redis:alpine"
     ports:
@@ -34,8 +34,7 @@ services:
       - POSTGRES_PASSWORD_FILE=/run/secrets/postgres_password
       - POSTGRES_DB_FILE=/run/secrets/postgres_db
     volumes:
-      - db_data:/var/lib/postgresql/data
-      - /efs/aerio_dump.sql:/docker-entrypoint-initdb.d/aerio_dump.sql
+      - /mnt/efs/fs1/aerio_dump.sql:/docker-entrypoint-initdb.d/aerio_dump.sql
     secrets:
       - postgres_user
       - postgres_password
