--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
     "mongoose": "^7.0.3",
+    "newrelic": "^10.1.1",
     "nodemon": "^2.0.22",
     "pg": "^8.10.0",
     "pg-promise": "^11.4.3",
