--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,12 +1,22 @@
+upstream nodeapp {
+    server server:3000;
+    keepalive 64;
+}
+
 server {
     listen 80;
 
     location / {
-        proxy_pass http://server:3000;
+        proxy_pass http://nodeapp;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 300s;
+        send_timeout 300s;
     }
 }
