--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,10 +1,9 @@
-http {
-    upstream nodeapp {
+upstream nodeapp {
         server server:3000;
         keepalive 64;
-    }
+}
 
-    server {
+server {
         listen 80;
 
         location / {
@@ -20,5 +19,12 @@ http {
             proxy_read_timeout 300s;
             send_timeout 300s;
         }
+
+	gzip on;
+	gzip_vary on;
+	gzip_proxied any;
+	gzip_comp_level 6;
+	gzip_buffers 16 8k;
+	gzip_http_version 1.1;
+	gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
     }
-}
